[gd_scene load_steps=13 format=3 uid="uid://cu376yfjan8xh"]

[ext_resource type="Script" path="res://Scenes/world.gd" id="1_f0y0k"]
[ext_resource type="Texture2D" uid="uid://btteb5kvqha60" path="res://Assets/World/GrassBackground.png" id="1_ji1xj"]
[ext_resource type="PackedScene" uid="uid://u5tfkss8psja" path="res://Assets/World/bush.tscn" id="2_fed6o"]
[ext_resource type="TileSet" uid="uid://bvdjb1742kcma" path="res://Assets/World/dirt_path.tres" id="2_uarky"]
[ext_resource type="TileSet" uid="uid://r635rq7cwiqb" path="res://Assets/World/cliff.tres" id="3_boyoo"]
[ext_resource type="PackedScene" uid="uid://cuo3oe8jnfu2e" path="res://Assets/World/grass.tscn" id="7_l3dwh"]
[ext_resource type="PackedScene" uid="uid://bvrc0r2g18lpc" path="res://Assets/Enemies/bat.tscn" id="8_ammu4"]
[ext_resource type="PackedScene" uid="uid://c7n62k12gwu26" path="res://Assets/UI/health_ui.tscn" id="9_fxqfd"]
[ext_resource type="PackedScene" uid="uid://c0q4t5xgvrm6x" path="res://Assets/World/tree.tscn" id="10_0ml5a"]
[ext_resource type="AudioStream" uid="uid://cj8cnl81hyfpx" path="res://Assets/Music and Sounds/Music.mp3" id="11_cr4x0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5w1oh"]
texture = ExtResource("1_ji1xj")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_cqtrp"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_5w1oh")

[node name="World" type="Node2D"]
script = ExtResource("1_f0y0k")

[node name="Background" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture_repeat = 2
texture = ExtResource("1_ji1xj")
offset = Vector2(160, 90)
region_enabled = true
region_rect = Rect2(-414, -179.5, 917, 497)

[node name="BgGrassTileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cqtrp")
format = 2
layer_0/name = "grass"
layer_0/tile_data = PackedInt32Array(-65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, 720894, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, -131059, 0, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, -131058, 0, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, -131057, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, -131056, 0, 0, -65520, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, -131055, 0, 0, -65519, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, -131054, 0, 0, -65518, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, -131053, 0, 0, -65517, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0)

[node name="DirtPathTileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_uarky")
format = 2
layer_0/tile_data = PackedInt32Array(458761, 65536, 2, 458762, 131072, 2, 458760, 327680, 1, 458759, 65536, 1, 458758, 65536, 1, 458757, 393216, 2, 458756, 65536, 0, 458755, 65536, 0, 458754, 65536, 0, 458753, 524288, 2, 458752, 65536, 0, 524288, 65536, 2, 524289, 65536, 2, 393223, 65536, 0, 393224, 393216, 2, 393225, 65536, 1, 327689, 65536, 0, 393222, 65536, 0, 393221, 0, 0, 327688, 0, 0, 524293, 65536, 2, 524292, 65536, 2, 524291, 327680, 1, 589827, 131072, 2, 589826, 0, 2, 524290, 393216, 1, 524294, 65536, 2, 524295, 393216, 1, 589832, 131072, 1, 655368, 131072, 1, 720904, 131072, 2, 720903, 0, 2, 655367, 0, 1, 524296, 131072, 1, 589831, 0, 1, 589823, 0, 2, 524287, 0, 0, 393217, 196608, 0, 393226, 327680, 1, 327690, 65536, 0, 327691, 65536, 0, 327692, 65536, 0, 327693, 458752, 2, 262157, 262144, 1, 262158, 65536, 2, 262159, 65536, 2, 262160, 65536, 2, 262161, 65536, 2, 262162, 65536, 2, 262163, 65536, 2, 196627, 65536, 0, 196626, 65536, 0, 196625, 65536, 0, 196624, 65536, 0, 196622, 65536, 0, 196621, 0, 0, 196623, 65536, 0, 196628, 131072, 0, 262164, 131072, 2, 393227, 65536, 2, 393228, 65536, 2, 393229, 131072, 2)

[node name="DirtCliffTileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_boyoo")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(393225, 65536, 1, 327689, 65536, 1, 327688, 65536, 1, 327687, 65536, 1, 262151, 393216, 2, 262150, 0, 0, 327686, 393216, 4, 393222, 0, 1, 393223, 65536, 1, 393224, 65536, 1, 393226, 65536, 1, 327691, 327680, 2, 327692, 131072, 0, 262155, 131072, 0, 262154, 65536, 0, 262153, 327680, 2, 327690, 65536, 1, 393227, 65536, 1, 458763, 327680, 1, 262152, 65536, 1, 458761, 65536, 1, 458760, 65536, 1, 524296, 65536, 1, 524295, 65536, 1, 524294, 393216, 1, 589830, 0, 2, 458759, 65536, 1, 458758, 393216, 2, 196616, 65536, 0, 196615, 0, 0, 327685, 0, 3, 196617, 131072, 0, 458762, 65536, 1, 524298, 65536, 2, 524299, 131072, 2, 524297, 327680, 1, 524293, 65536, 2, 524292, 65536, 2, 458756, 65536, 0, 458757, 65536, 0, 524291, 0, 2, 458755, 393216, 0, 458754, 262144, 3, 393218, 196608, 1, 589831, 65536, 2, 589832, 65536, 2, 589833, 458752, 1, 655369, 262144, 3, 655370, 131072, 3, 393228, 327680, 2, 458765, 65536, 2, 458766, 131072, 2, 393230, 327680, 0, 393231, 65536, 3, 393229, 65536, 0, 458764, 65536, 2, 393232, 458752, 3, 327696, 196608, 0, -65530, 393216, 0, 6, 0, 2, 7, 65536, 2, 8, 65536, 2, 9, 65536, 2, 10, 131072, 2, -65526, 131072, 0, -65527, 65536, 0, -65528, 65536, 0, -65529, 65536, 0, -65531, 65536, 3, -65532, 0, 3, 131072, 131072, 2, 196607, 0, 2, 327680, 0, 3, 327681, 65536, 3, 327682, 458752, 0, 1, 262144, 0, 2, 131072, 3, 65537, 458752, 3, 65536, 327680, 0, 131071, 393216, 0, 131070, 262144, 3, 65534, 196608, 0)

[node name="Ysort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Bushes" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="Bush" parent="Ysort/Bushes" instance=ExtResource("2_fed6o")]
position = Vector2(80, 72)

[node name="Bush2" parent="Ysort/Bushes" instance=ExtResource("2_fed6o")]
position = Vector2(136, 56)

[node name="Bush3" parent="Ysort/Bushes" instance=ExtResource("2_fed6o")]
position = Vector2(192, 72)

[node name="Grass" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="Grass3" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(32, 64)

[node name="Grass4" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(176, 0)

[node name="Grass5" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(160, 0)

[node name="Grass6" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(208, 112)

[node name="Grass7" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(192, 112)

[node name="Grass8" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(160, 144)

[node name="Grass9" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(176, 144)

[node name="Grass10" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(80, 144)

[node name="Grass11" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(72, 144)

[node name="Grass12" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(16, 144)

[node name="Grass13" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(0, 144)

[node name="Grass14" parent="Ysort/Grass" instance=ExtResource("7_l3dwh")]
position = Vector2(0, 96)

[node name="Enemies" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="Bat" parent="Ysort/Enemies" instance=ExtResource("8_ammu4")]
position = Vector2(57, 115)

[node name="Bat2" parent="Ysort/Enemies" instance=ExtResource("8_ammu4")]
position = Vector2(185, 50)

[node name="Bat3" parent="Ysort/Enemies" instance=ExtResource("8_ammu4")]
position = Vector2(152, 144)

[node name="Bat4" parent="Ysort/Enemies" instance=ExtResource("8_ammu4")]
position = Vector2(256, 40)

[node name="Trees" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="Tree" parent="Ysort/Trees" instance=ExtResource("10_0ml5a")]
position = Vector2(125, 96)

[node name="Tree2" parent="Ysort/Trees" instance=ExtResource("10_0ml5a")]
position = Vector2(238, 159)

[node name="Tree3" parent="Ysort/Trees" instance=ExtResource("10_0ml5a")]
position = Vector2(274, 87)

[node name="GameUI" type="CanvasLayer" parent="."]
visible = false

[node name="HealthUI" parent="GameUI" instance=ExtResource("9_fxqfd")]
offset_left = 5.0
offset_top = 4.0
offset_right = 65.0
offset_bottom = 15.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_cr4x0")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="MenuUI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="MenuUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_top = 8.0
offset_right = -80.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuUI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/MainMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 12
text = "Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Host" type="Button" parent="MenuUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Host
"

[node name="Join" type="Button" parent="MenuUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Join
"

[node name="AddressEntry" type="LineEdit" parent="MenuUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Enter Address to Join"

[node name="Quit" type="Button" parent="MenuUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Quit"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Assets/Player/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="MenuUI/MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuUI/MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MenuUI/MainMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
